--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,15 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# macOS specific files
+.DS_Store
+
+#ignore large files
+washington dc_real estate market_houses for sale_2024_light.json
+data/washington dc_real estate market_houses for sale_2024_light.json
+*.pkl
+
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
