--- a/.gitignore
+++ b/.gitignore
@@ -158,14 +158,14 @@ cython_debug/
 .DS_Store
 
 #ignore large files
-washington dc_real estate market_houses for sale_2024_light.json
-data/washington dc_real estate market_houses for sale_2024_light.json
+# washington dc_real estate market_houses for sale_2024_light.json
+# data/washington dc_real estate market_houses for sale_2024_light.json
 *.pkl
-data/*.json
-data/washington dc_real estate market_houses for sale_2024.json
-data/washington dc_real estate market_houses for sale_2024_light.json
-data/cleaned_real_estate_data.csv
-data/heavy_cleaned_real_estate_data.csv
+# data/*.json
+# data/washington dc_real estate market_houses for sale_2024.json
+# data/washington dc_real estate market_houses for sale_2024_light.json
+# data/cleaned_real_estate_data.csv
+# data/heavy_cleaned_real_estate_data.csv
 
 
 
